Implemented First Part of Start Workout System
Only first half (data side still needs to be done). Also, it hasn't been tested yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.EagleFit"
         tools:targetApi="31">
         <activity
+            android:name=".StartWorkoutActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".WorkoutPlanActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity">
